# tetris-py

./: .gitignore  NOTICE  README.md  board.py  direction.py  pyproject.toml  run  run_cli
.github/workflows/: python-build.yml
src/: board.py  colours.py  command.py  direction.py  engine.py  interface.py  main.py  main_cli.py  piece.py  point.py  scorer.py  utils.py
src/tetris/: __init__.py  board.py  colours.py  command.py  direction.py  engine.py  interface.py  main.py  main_cli.py  piece.py  point.py  scorer.py  statistics.py  utils.py
src/tetris/interface/: abstract.py  cli.py  pygame.py
src/tetris_game/: direction.py  engine.py  scorer.py
tests/: conftest.py  test_board.py  test_piece.py  test_point.py
