[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris-py"
version = "0.0.14"
authors = [
  { name="Toma Popov", email="toma98@hotmail.co.uk" },
]
description = "A Tetris game written in Python."
readme = "README.md"
dependencies = [
    "pygame",
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License"
]

[project.scripts]
tetris-py = "tetris:main.main"
tetris-py-cli = "tetris:main_cli.main"

[project.urls]
Homepage = "https://github.com/tomapopov/tetris-py"
Issues = "https://github.com/tomapopov/tetris-py/issues"

